Fix hero too high on small mobile phones

--- a/static/organisms/hero.css
+++ b/static/organisms/hero.css
@@ -7,7 +7,7 @@
 .hero__images-spacer {
     width: calc(28 * var(--spacing));
     min-width: 30vw;
-    max-width: 70vw;
+    max-width: 95vw;
 }
 
 .hero__message {
